--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ border-radius: 26px;
     background-color: #161c3b;
 }
 
+.ms_btn-psnow {
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+}
+
 .ms_section-title {
     background-color: teal;
     height: 70px;
